# Mammoth2D

./: .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  RunTutorials.sh  RunUnitTests.sh  main.cpp  unixBuild.sh
.git copy/: COMMIT_EDITMSG  config  index
.git copy/logs/: HEAD
.git copy/logs/refs/remotes/origin/: master
.git copy/refs/remotes/origin/: master
Resources/Shaders/: simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
Shaders/: simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
Sources/: Buffer.cpp  Buffer.hpp  BufferLayout.cpp  BufferLayout.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Core.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.hpp  Geometry.cpp  Geometry.hpp  Input.cpp  Input.hpp  Logging.cpp  Logging.hpp  Pipeline.cpp  Pipeline.hpp  Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp
Sources/Camera/: Camera.hpp  PerspectiveCamera.hpp
Sources/Context/Vulkan/: BufferLayout.hpp  Image.cpp  LogicalDevice.cpp
Sources/Events/: Bus.hpp  Event.hpp  EventSystem.cpp  EventSystem.hpp  Handler.hpp
Sources/Graphics/: Graphics.cpp  Graphics.hpp  Shader.hpp
Sources/Graphics/Buffers/: Buffer.cpp  Buffer.hpp  BufferLayout.cpp  BufferLayout.hpp  UniformBuffer.cpp  UniformBuffer.hpp
Sources/Graphics/Commands/: CommandBuffer.hpp  CommandPool.hpp
Sources/Graphics/Descriptors/: DescriptorHandler.cpp  DescriptorHandler.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorWriter.hpp
Sources/Graphics/Devices/: Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.hpp
Sources/Graphics/Images/: Image.cpp  Image.hpp
Sources/Graphics/Pipelines/: Constant.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  Uniform.hpp  VertexInput.cpp  VertexInput.hpp
Sources/Graphics/Renderer/: EnemySystem.cpp  EnemySystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Sprite2DSystem.cpp  Sprite2DSystem.hpp  Subrender.hpp  SwapChain.cpp  SwapChain.hpp
Sources/Graphics/Shader/: Constant.hpp  Shader.cpp  Shader.hpp  Uniform.cpp  VertexInput.hpp
Sources/Physics/: Collision.cpp  Collision.hpp  Physics.cpp  Physics.hpp  SpatialGrid.cpp  SpatialGrid.hpp
Sources/RenderSystems/: PlayerSystem.cpp  PlayerSystem.hpp  RenderSystem.hpp
Sources/Scene/: Entity.hpp  EntityManager.hpp  PlayerController.hpp  Scene.cpp  Scene.hpp  System.hpp
Tests/: CMakeLists.txt
Tests/Tutorial1/: CMakeLists.txt  Thesis.md  main.cpp
Tests/UnitTests/: CMakeLists.txt  ExampleTest.cpp
include/mammoth/: mamoth.hpp
src/: CMakeLists.txt  core.hpp  engine.hpp  factory.hpp  game.hpp  input.hpp  logging.hpp  mammoth.cpp  thesis.md
src/camera/: camera.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp
src/context/: renderer_interface.hpp  shader_resouce.hpp
src/context/common/: accessor.hpp  api.hpp  context.hpp  renderer.hpp  shader.hpp  vertex.hpp
src/context/gl/: gl_shader.hpp  gl_texture.cpp  gl_texture.hpp
src/context/opengl/: gl_buffer.cpp  gl_buffer.hpp  gl_buffer_attribute.hpp  gl_context.cpp  gl_context.hpp  gl_core.cpp  gl_core.hpp  gl_frame_buffer.cpp  gl_frame_buffer.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_program.cpp  gl_program.hpp  gl_renderer.hpp  gl_resource.cpp  gl_resource.hpp  gl_sampler.cpp  gl_sampler.hpp  gl_shader.cpp  gl_shader.hpp  gl_shader_program.cpp  gl_shader_program.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_input.cpp  gl_vertex_input.hpp
src/context/opengl/gl_renderer/: gl_renderer.cpp  gl_renderer.hpp
src/context/vulkan/: vk_buffer_layout.hpp  vk_command_buffer.cpp  vk_command_pool.cpp  vk_physical_device.cpp  vk_uniform.hpp
src/context/vulkan/old/: engine.cpp  vk_buffer_layout.cpp  vk_descriptor_handler.hpp  vk_descriptor_writer.hpp  vk_graphics.cpp  vk_graphics.hpp  vk_pipeline.cpp
src/core/: factory.hpp  graphics.cpp  graphics.hpp  mesh.hpp  perspective_camera.hpp  thesis.md
src/events/: event.hpp  event_bus.hpp
src/files/: file.hpp
src/graphics/: factory.hpp  framebuffer.hpp  graphics.cpp  graphics.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex_input.hpp
src/window/: gl_window.cpp  gl_window.hpp  glfw_window.cpp  glfw_window.hpp  window.hpp
testbed/: CMakeLists.txt
testbed/demo/: CMakeLists.txt  main.cpp
testbed/resources/Shaders/: simple.frag  test.frag  test.vert
testbed/units/: CMakeLists.txt
vulkan_old/: glfw_window.cpp  glfw_window.hpp  input.hpp  note.md  resource_manager.cpp  vk_buffer.cpp  vk_physical_device.hpp
